[tool.poetry]
name = "robusta_task"
version = "0.1.0"
description = "Shift & Matrix encription algorithms, task for robusta"
authors = ["Ahmed Shahwan <ahmed@shahwan.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
flake8-black = "^0.2.1"
docker-compose = "^1.27.4"
ipython = "^7.19.0"
ipdb = "^0.13.4"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
